// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildkite-graph Steps Command Conditional dependencies can be specified dot 1`] = `
"digraph \\"x\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<a>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<b>\\" [ color = \\"grey\\" ];
}

  \\"[object Object]\\";
  \\"<b>\\";
  \\"[object Object]\\" -> \\"<b>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "a",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "b",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified multiple times as dependency dot 1`] = `
"digraph \\"x\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<a>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<b>\\" [ color = \\"grey\\" ];
  \\"<c>\\" [ color = \\"grey\\" ];
}

  \\"[object Object]\\";
  \\"<b>\\";
  \\"<c>\\";
  \\"[object Object]\\" -> \\"<b>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"[object Object]\\" -> \\"<c>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified multiple times as dependency json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "a",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "b",
    },
    Object {
      "command": "c",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified multiple times as dependency yaml 1`] = `
"steps:
  - command: a
  - wait: ~
  - command: b
  - command: c
"
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified yaml 1`] = `
"steps:
  - command: a
  - wait: ~
  - command: b
"
`;

exports[`buildkite-graph Steps Command async step addition dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command async step addition dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
}
"
`;

exports[`buildkite-graph Steps Command async step addition json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command async step addition json 2`] = `
Object {
  "steps": Array [],
}
`;

exports[`buildkite-graph Steps Command async step addition yaml 1`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command async step addition yaml 2`] = `
"steps: []
"
`;

exports[`buildkite-graph Steps Command async step creation dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command async step creation dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command async step creation json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command async step creation json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command async step creation yaml 1`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command async step creation yaml 2`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command step addition dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command step addition dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command step addition dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
}
"
`;

exports[`buildkite-graph Steps Command step addition json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command step addition json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command step addition json 3`] = `
Object {
  "steps": Array [],
}
`;

exports[`buildkite-graph Steps Command step addition yaml 1`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command step addition yaml 2`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command step addition yaml 3`] = `
"steps: []
"
`;
